Create pacientes objects table
