# backend/api/models.py
@@ -4,6 +4,8 @@ class Medicamento(models.Model):
     name = models.CharField(max_length=255)
     category = models.CharField(max_length=255)
     anvisa_code = models.CharField(max_length=255)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
 
     class Meta:
         ordering = ["name"]
@@ -13,8 +15,10 @@ class Medicamento(models.Model):
 
 class Paciente(models.Model):
     name = models.CharField(max_length=255)
-    birth_unix = models.CharField(max_length=255)
+    birth = models.DateField(max_length=8)
     cpf_code = models.CharField(max_length=255)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
 
     class Meta:
         ordering = ["name"]
@@ -25,6 +29,11 @@ class Paciente(models.Model):
 class Receita(models.Model):
     paciente = models.ForeignKey(Paciente, on_delete=models.CASCADE)
     medicamentos = models.ManyToManyField(Medicamento)
+    created_at = models.DateTimeField(auto_now_add=True)
+    updated_at = models.DateTimeField(auto_now=True)
+
+    class Meta:
+        ordering = ["-created_at"]
 
     def __str__(self):
-        return self.paciente
+        return self.paciente.name + " - " + str(self.created_at)
